Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100630

PdfLinkModel don't give the right rect everytime

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.1
    • 5.15.8
    • PDF
    • None
    • All
    • b78c78349 (dev), 5642f33e1 (6.7), 61a65ca96 (6.6), ac447e8dc (dev), b0e44197d (6.5), ff44bee52 (6.7), b9591cd63 (tqtc/lts-6.5)

      The rect value of the links is not always correct when using PdfLinkModel .

      According to the google code found here:

      https://chromium.googlesource.com/chromium/src/+/2355c635ab7c530c0191c12d4e191861055d696b/pdf/pdfium/pdfium_page.cc

      in the function void PDFiumPage::PopulateAnnotationLinks(), you can see that the values are sometime swapped. The method is a little more complex than Qt is doing this in the function void QPdfLinkModelPrivate::update(), they use also FPDFLink_CountQuadPoints.

      I was able to a patch in qml to obtain the right value, but this one should be done correctly in  QPdfLinkModelPrivate::update().

        1. quadpoints.png
          52 kB
          Shawn Rutledge
        2. rects.png
          50 kB
          Shawn Rutledge
        3. screenshot-1.png
          96 kB
          Jean-Luc Gyger
        4. test.pdf
          14.73 MB
          Jean-Luc Gyger
        5. without-swap.png
          49 kB
          Shawn Rutledge
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            majuca Jean-Luc Gyger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: